--- a/CS7504DevOpsAssignment1/Content/site.css
+++ b/CS7504DevOpsAssignment1/Content/site.css
@@ -90,7 +90,7 @@ body {
 
 
 .header {
-    /* background-color: #9933cc; */
+    background-color: #9933cc;
     color: #ffffff;
     padding: 15px;
 }
@@ -98,21 +98,21 @@ body {
 
 .menu {
     overflow: hidden;
-    /* background-color: gray; */
+    background-color: gray;
 }
 
 
     .menu a {
         float: left;
         display: block;
-        /* color: #f2f2f2; */
+        color: #f2f2f2;
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
     }
 
         .menu a:hover {
-           /* background-color: #0099cc; */
+           background-color: #0099cc;
         }
 
 img {
